Fixed stretched index image

--- a/apps/web/src/style/main.css
+++ b/apps/web/src/style/main.css
@@ -20,7 +20,6 @@ a {
 
 #index-image {
   background: url('/bg-image.jpg');
-  filter: grayscale();
   background-size: cover;
   background-position-x: -50px;
 }
